Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -276,6 +276,7 @@ stages:
                 
                 # ingest Selenium logs into Azure Monitor Log Analytics
                 wget -O ingest_logs_into_azure_monitor.py https://raw.githubusercontent.com/andreas-31/cicd-automated-testing/main/automatedtesting/selenium/ingest_logs_into_azure_monitor.py
+                wget -O LogAnalyticsDataCollector.py https://raw.githubusercontent.com/andreas-31/cicd-automated-testing/main/automatedtesting/selenium/LogAnalyticsDataCollector.py
                 python3 ./ingest_logs_into_azure_monitor.py $(AZURE_LOG_CUSTOMER_ID) $(AZURE_LOG_SHARED_KEY)
 
   - job: RunLoadTestsWithJMeter
